--- a/app/styles/semba/_mixins.scss
+++ b/app/styles/semba/_mixins.scss
@@ -6,3 +6,7 @@
     width:                       $menu-button-width;
   }
 }
+
+@mixin no-scroll {
+	overflow:                          hidden;
+}
